--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1,7 +1,7 @@
-helm_result:
+helm_result: {}
   #replicas: 1
   #port: 80
-  image: "vikasharya000/result:1"
+  # image: "namrata99/result:1"
   #specify container name using containerName key
   #containerName: result
   #service:
@@ -10,9 +10,9 @@ helm_result:
     #targetPort: 80
     #nodePort: 31003
 
-helm_vote: 
+helm_vote: {}
   #replicas: 1
-  image: "vikasharya000/vote:27"
+  # image: "namrata99/vote:27"
   #specify container name using containerName key
   #containerName: vote
   #port: 80
@@ -22,8 +22,8 @@ helm_vote:
     #targetPort: 80
     #nodePort: 31000
 
-helm_worker:
-  image: "vikasharya000/worker:1"
+helm_worker: {}
+  # image: "namrata99/worker:1"
 
 psql: {}
 
