--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: voting-app-chart
+name: voting_app_chart
 description: A Helm chart for complete voting-app to deploy on Kubernetes
 
 
